environments/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: krgeobuk-prod
  labels:
    name: krgeobuk-prod
    environment: production
